# AIGC-3DGS-Fusion

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  environment.yml  pyproject.toml  report.md  report_full_hw3.md  requirements.txt
data/toy_scene/: transforms.json
scripts/: aws_ec2_train.md  aws_env_probe_user_data.sh  aws_hw3_full_user_data.sh  aws_train_quality_sweep_user_data.sh  aws_train_user_data.sh  submit_slurm.md
slurm/: train_toy_gpu.sbatch  train_toy_gpu_aws.sbatch
src/aigc3dgs/: __init__.py  asset_pipeline.py  cameras.py  download_dataset.py  evaluate_quality.py  final_fusion_render.py  final_report_assets.py  fusion_scene.py  gaussian_model.py  ply_io.py  prepare_toy_dataset.py  render.py  train.py
weights/aws_ec2_toy_3dgs/: metrics.txt  model_final.ply  model_final.pth
weights/aws_ec2_toy_3dgs_q2_20k_1024/: metrics.txt  model_final.ply  model_final.pth
weights/aws_ec2_toy_3dgs_q3_40k_2048/: metrics.txt  model_final.ply  model_final.pth
weights/aws_ec2_toy_3dgs_quality/: metrics.txt  model_final.ply  model_final.pth
weights/toy_3dgs/: model_final.ply  model_final.pth
weights/toy_3dgs_gpu/: metrics.txt  model_final.ply  model_final.pth
weights/toy_3dgs_gpu_quality/: metrics.txt  model_final.ply  model_final.pth
