[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc-3dgs-fusion"
version = "0.1.0"
description = "教学版 3D Gaussian Splatting 作业实现"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "tqdm>=4.66",
  "requests>=2.31",
  "torch>=2.3",
]

[tool.setuptools.packages.find]
where = ["src"]
